tests/expected/function-contract/modifies/check_invalid_modifies.expected
error: `&str` doesn't implement `kani::Arbitrary`.
|
| kani_core::kani_lib!(kani);
| ^^^^^^^^^^^^^^^^^^^^^^^^^^
|
= help: All objects in the modifies clause must implement the Arbitrary. The return type must also implement the Arbitrary trait if you are checking recursion or using verified stub.
